20150427
	Change Makefile CFLAGS and debugging decisions a bit; let's build
	with -Wall -Werror and friends by default.

	Fix typos and formatting mistakes in doc/BOARDS.

	Fix some groff/mdoc errors in bsdhwmon.8.

	Fix previous timestamp in doc/CHANGES (20141231, not 20151231).

	Fix 16-bit fan RPM overflow scenario (mainly for W83793G).

20141231
	Migrate to github.com instead of my own local CVS repository.

20140811
	Documentation/CHANGES typos/fixes.

20140625
	For read_byte() and write_byte(), renamed "index" variable to
	"idxreg" to avoid potential shadowing conflicts.

20130605
	Added -J flag to provide JSON-formatted output.

	Change post-increment (ex. i++) to pre-increment (ex. ++i).

	Remove some unused function prototype declarations, and declare a
	few functions as static.

	Shortened lines in some documentation.

	Clean up error handling code in main, make SMB I/O routines
	exit with EX_IOERR rather than 1.

	Use -Werror -Wall for non-debug builds, and use -Wformat-security
	for both build types.

20120702
	Some general documentation adjustments; nothing important.

	Adjust some CFLAGS (remove -Wunused; implied by -Wall).

	Split collect.c up into individual chip_XXX.c files; easier to
	maintain.

	W83627DHG: Add support for the Nuvoton/Winbond 83627DHG-P
	and 83627DHG-PT.

	Properly fix SMBus slave address addressing "bug" in 20090703.
	smb(4) and ichsmb(4) changes made shortly after the release of
	7.2-RELEASE (specifically __FreeBSD_version 702101) caused this.
	Key off of __FreeBSD_version to decide whether or not to shift
	the slave address or not.  Thanks to Billy Newsom for bringing
	this to my attention.

	W83792D: Fetch Winbond chip revision for debugging purposes.

	Use exclusive locks when opening the /dev/smbX device; this ensures
	only one bsdhwmon process can access the device at a time.

	Fixes for small memory leaks (missing free() statements), re-order
	some include statements, and pre-initialise some structs.  Valgrind