@@ -30,6 +30,17 @@ CFLAGS+=	-Werror -Wall -Wextra -Wformat-security -Waggregate-return -Wbad-functi
 
 OBJS=	main.o boards.o output.o chip_w83792d.o chip_w83793g.o chip_x6dva.o
 
+# Different versions of FreeBSD use different smbus(4) struct semantics
+KERNVER!=	/usr/bin/uname -K
+
+.if ${KERNVER} >= 1100070
+OBJS+=	smbus_io_1100070.o
+.elif ${KERNVER} >= 702101
+OBJS+=	smbus_io_702101.o
+.else
+OBJS+=	smbus_io_old.o
+.endif
+
 all: bsdhwmon man
 
 bsdhwmon: ${OBJS}
